# src/routes/users.routes.js
@@ -1,13 +1,15 @@
 const express = require("express");
 const router = express.Router();
 const user  = require("../controllers/user.controller");
+const Secure = require("../middleware/secureRoute.middleware");
 
 
-router.get("/user",user.findAll);
-router.get("/user/:id",user.findById);
+router.get("/user",Secure.authenticateJWT,user.findAll);
+router.get("/user/:id",Secure.authenticateJWT,user.findById);
 router.post("/user",user.register);
-router.put("/user/:id",user.update);
-router.delete("/user/:id", user.delete);
+router.put("/user/:id",Secure.authenticateJWT,user.update);
+router.delete("/user/:id",Secure.authenticateJWT, user.delete);
+router.post("/user/authentification", user.authentification);
 
 //router.post("/users",users.Create)
 module.exports = router
